--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,3 +15,9 @@ variables:
 
 steps:
 - script: dotnet build -c $(buildConfiguration)
+
+- task: DotNetCoreCLI@2
+  inputs:
+    command: test
+    arguments: '-c $(buildConfiguration)'
+    projects: '**/*Test/*.csproj'
