--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,11 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- script: dotnet build -c $(buildConfiguration)
+- task: DotNetCoreCLI@2
+  inputs:
+    command: build
+    arguments: '-c $(buildConfiguration)'
+    projects: '**/*.sln'
 
 - task: DotNetCoreCLI@2
   inputs:
